--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    tasks.whenTaskAdded { task ->
+        if (task.name.contains("lint")
+                ||task.name.equals("clean")
+                ||task.name.contains("Aidl")
+                ||task.name.contains("mockableAndroidJar")
+                ||task.name.contains("UnitTest")
+                ||task.name.contains("AndroidTest")
+                || task.name.contains("Ndk")
+                || task.name.contains("Jni")
+        ) {
+            task.enabled = false
+        }
+    }
+
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "business_android_client.wechatassistant"
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -25,6 +40,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0'
     testCompile 'junit:junit:4.12'
 }
